--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.ExpenseTracker"
         tools:targetApi="31">
         <activity
-            android:name=".HomeActivity"
+            android:name=".DashboardActivity"
             android:exported="false" />
         <activity
             android:name=".ResetPasswordActivity"
